--- a/demo.html
+++ b/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?12013143');
-      src: url('./font/fontello.eot?12013143#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?12013143') format('woff'),
-           url('./font/fontello.ttf?12013143') format('truetype'),
-           url('./font/fontello.svg?12013143#fontello') format('svg');
+      src: url('./font/fontello.eot?39691071');
+      src: url('./font/fontello.eot?39691071#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?39691071') format('woff'),
+           url('./font/fontello.ttf?39691071') format('truetype'),
+           url('./font/fontello.svg?39691071#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -345,13 +345,16 @@ body {
       <div class="row">
         <div title="Code: 0xe81c" class="the-icons span3"><i class="demo-icon icon-minus">&#xe81c;</i> <span class="i-name">icon-minus</span><span class="i-code">0xe81c</span></div>
         <div title="Code: 0xe81d" class="the-icons span3"><i class="demo-icon icon-download">&#xe81d;</i> <span class="i-name">icon-download</span><span class="i-code">0xe81d</span></div>
+        <div title="Code: 0xe81e" class="the-icons span3"><i class="demo-icon icon-funnel">&#xe81e;</i> <span class="i-name">icon-funnel</span><span class="i-code">0xe81e</span></div>
         <div title="Code: 0xf099" class="the-icons span3"><i class="demo-icon icon-twitter">&#xf099;</i> <span class="i-name">icon-twitter</span><span class="i-code">0xf099</span></div>
-        <div title="Code: 0xf09a" class="the-icons span3"><i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xf09a" class="the-icons span3"><i class="demo-icon icon-facebook">&#xf09a;</i> <span class="i-name">icon-facebook</span><span class="i-code">0xf09a</span></div>
         <div title="Code: 0xf0ec" class="the-icons span3"><i class="demo-icon icon-exchange">&#xf0ec;</i> <span class="i-name">icon-exchange</span><span class="i-code">0xf0ec</span></div>
         <div title="Code: 0xf16a" class="the-icons span3"><i class="demo-icon icon-youtube">&#xf16a;</i> <span class="i-name">icon-youtube</span><span class="i-code">0xf16a</span></div>
         <div title="Code: 0xf195" class="the-icons span3"><i class="demo-icon icon-try">&#xf195;</i> <span class="i-name">icon-try</span><span class="i-code">0xf195</span></div>
+      </div>
+      <div class="row">
         <div title="Code: 0xf232" class="the-icons span3"><i class="demo-icon icon-whatsapp">&#xf232;</i> <span class="i-name">icon-whatsapp</span><span class="i-code">0xf232</span></div>
       </div>
     </div>
